tests/fixtures/valid/minimal.ko
module minimal {
    meta {
        purpose: "Minimal valid module",
        version: "0.1.0",
        author: "test"
    }

    fn noop() {
    }
}
